<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddDictionary"
    android:background="@color/colorPrimary"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="300dp">
        <include layout="@layout/edit_dictionary_app_bar" android:id="@+id/AddDictionaryAppBar" />
        <TextView
            android:id="@+id/textViewAbbreviation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/abbreviation"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@id/editTextAbbreviation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextAbbreviation"
            app:layout_constraintTop_toBottomOf="@id/AddDictionaryAppBar"
            app:layout_constraintVertical_bias="0.2" />

        <EditText
            android:id="@+id/editTextAbbreviation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="6dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_style"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@id/textViewMeaning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAbbreviation"
            app:layout_constraintVertical_bias="0.05"
            android:autofillHints="@string/abbreviation" />
        <TextView
            android:id="@+id/textViewMeaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meaning"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@id/editTextMeaning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/editTextMeaning"
            app:layout_constraintTop_toBottomOf="@id/editTextAbbreviation"
            app:layout_constraintVertical_bias="0.4" />

        <EditText
            android:id="@+id/editTextMeaning"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="6dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_style"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@id/delete_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMeaning"
            app:layout_constraintVertical_bias="0.07" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/delete_button_style"
            android:elevation="0dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/ThinWhite"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/save_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextMeaning"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/permissions_granted_button"
            android:elevation="0dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/ThinWhite"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/delete_button"
            app:layout_constraintTop_toBottomOf="@+id/editTextMeaning" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>